<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="education">Education</string>
    <string name="study_app_dev_with_us">Study app dev with us!</string>
    <string name="app_logo">App logo</string>
    <string name="category">Category</string>
    <string name="android">Android</string>
    <string name="android_logo">Android logo</string>
    <string name="flutter_logo">Flutter logo</string>
    <string name="flutter">Flutter</string>
    <string name="ios_logo">iOS logo</string>
    <string name="ios">iOS</string>
    <string name="gaming_logo">Gaming logo</string>
    <string name="gaming">Gaming</string>
    <string name="video_editing_logo">Video editing logo</string>
    <string name="video_editing">Video editing</string>
    <string name="finance_logo">Finance logo</string>
    <string name="finance">Finance</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="logout">logout</string>
    <string name="this_is_profile_fragment">This is profile fragment</string>
    <string name="this_is_logout_fragment">This is Logout fragment</string>
</resources>